--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
